# aether

./: .commitlintrc.json  .gitignore  .releaserc  CHANGELOG.md  Cargo.toml  GitVersion.yml  README.md  README.zh-CN.md  aether.toml.example  package-lock.json  package.json
.github/: release.yml
.github/workflows/: changelog.yml  ci.yml  release.yml  version.yml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/templates/: mod.rs
cli/templates/nestjs/: README.md  package.json
cli/templates/nestjs/src/: main.ts
cli/templates/nestjs/src/workflows/: workflow.controller.ts  workflow.service.ts
cli/templates/nestjs/src/workflows/dto/: workflow.dto.ts
cli/templates/python/: .gitignore  README.md  pyproject.toml
cli/templates/python/src/: main.py
cli/templates/python/src/workflows/: workflow.py
cli/templates/typescript/: README.md  package.json  workflow.ts
cli/templates/typescript/src/: index.ts
cli/templates/typescript/src/workflows/: .gitkeep
core/kernel/: Cargo.toml  build.rs
core/kernel/proto/: aether.proto
core/kernel/src/: broadcaster.rs  dashboard_assets.rs  dashboard_server.rs  execution.rs  grpc_server.rs  kernel.rs  lib.rs  scheduler.rs  server.rs  service_registry.rs  state_machine.rs  task.rs  tracker.rs  worker.rs  workflow.rs
core/kernel/src/api/: error.rs  mod.rs  models.rs  routes.rs  websocket.rs
core/kernel/src/api/handlers/: admin.rs  mod.rs  steps.rs  workers.rs  workflows.rs
core/kernel/src/persistence/: l0_memory.rs  l1_snapshot.rs  l2_state_action_log.rs  mod.rs
core/kernel/src/proto/: aether.rs  aether.v1.rs
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: WorkflowDetail.tsx  WorkflowList.tsx
dashboard/src/components/layout/: AppSidebar.tsx  Header.tsx  ThemeToggle.tsx
dashboard/src/components/ui/: sidebar.tsx
dashboard/src/components/workflow/: StepNode.tsx  WorkflowGraph.tsx
dashboard/src/lib/: motion.ts  types.ts  websocket.ts
dashboard/src/providers/: ThemeProvider.tsx
docs/: RELEASE_CHECKLIST.md
examples/multilang-workflow/: README.md  package.json  tsconfig.json  workflow.ts
examples/multilang-workflow/nestjs-service/: package.json  tsconfig.json
examples/multilang-workflow/nestjs-service/src/: app.module.ts  main.ts
examples/multilang-workflow/nestjs-service/src/aether/: aether.module.ts  aether.service.ts
examples/multilang-workflow/nestjs-service/src/demo/: demo.service.ts
examples/multilang-workflow/nestjs-service/src/trpc/: trpc.controller.ts  trpc.module.ts  trpc.router.ts  trpc.service.ts
examples/multilang-workflow/python-service/: main.py  pyproject.toml
examples/order-processing/: index.ts
examples/quickstart/: index.ts  package-lock.json  package.json  slow-test.ts
examples/trpc/: README.md  package-lock.json  package.json
examples/trpc/src/: index.ts
proto/: aether.proto  build.rs
scripts/: build.sh
sdks/nestjs/: README.md  package-lock.json  package.json
sdks/nestjs/src/: aether.constants.ts  aether.module.ts  index.ts
sdks/nestjs/src/interfaces/: aether-config.interface.ts  index.ts  resource-ref.interface.ts  workflow-context.interface.ts
sdks/nestjs/src/providers/: aether-worker.service.ts
sdks/python/: example_service.py  pyproject.toml
sdks/python/src/aether/: __init__.py
sdks/trpc/: README.md  package-lock.json  package.json
sdks/trpc/src/: aether-trpc.ts  create-aether-trpc.ts  index.ts  procedure-builder-proxy.ts  types.ts
sdks/trpc/tests/: aether-trpc.test.ts
sdks/typescript/: jest.config.js  package-lock.json  package.json
sdks/typescript/src/: client.ts  index.ts  workflow.ts
sdks/typescript/tests/integration/: main.test.ts  workflow.test.ts
