[package]
name = "aether-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for Aether workflow engine"
license = "MIT"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tonic = { version = "0.10", features = ["transport"] }
prost-types = "0.12"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
