[package]
name = "aetherframework-kernel"
version = "0.1.4"
edition = "2021"
description = "Core kernel for Aether workflow engine"
license = "Apache-2.0"

[features]
default = ["dashboard"]
dashboard = [
    "rust-embed",
    "mime_guess",
    "serde/derive",
]

[build-dependencies]
prost-build = "0.12"
tonic-build = "0.10"

[dependencies]
actix-web = { version = "4", optional = true }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tonic = "0.10"
async-trait = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Axum and OpenAPI dependencies
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
futures-util = "0.3"

# Dashboard feature dependencies (optional)
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
